# ToyPathTracer

./: .clangd  .gitignore  CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/camera/: CMakeLists.txt  camera.cpp  camera.h
src/core/: CMakeLists.txt  pathtracer.cpp  pathtracer.h  renderer.cpp  renderer.h
src/geometry/: CMakeLists.txt  intersection.cpp  intersection.h  objects.cpp  objects.h  scene.cpp  scene.h  shape.cpp  shape.h
src/light/: CMakeLists.txt  light.cpp  light.h
src/material/: CMakeLists.txt  bxdf.cpp  bxdf.h  fresnel.cpp  fresnel.h  material.cpp  material.h
src/sampler/: CMakeLists.txt  sampler.cpp  sampler.h
src/utils/: CMakeLists.txt  color.cpp  color.h  image.cpp  image.h  logger.h  mat.h  ray.h  timer.h  transform.cpp  transform.h  utils.cpp  utils.h  vec.h
test/: CMakeLists.txt  fresnel_test.cpp  intersection_test.cpp  sampler_test.cpp  shape_test.cpp  transformation_test.cpp  utils_test.cpp
